--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -14,6 +14,6 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "api"]
 }
 
