fix: deploy vercel

--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -3,11 +3,7 @@
   "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api"
-    },
-    {
-      "source": "/health",
+      "source": "/(.*)",
       "destination": "/api"
     }
   ]
