--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
     "dev": "tsx watch src/server.ts",
     "prebuild": "npm run build --workspace=@agentic-ai-chat/shared || (cd ../../packages/shared && npm run build)",
     "build": "tsc",
+    "vercel-build": "npm run prebuild && npm run build",
     "start": "node dist/server.js",
     "lint": "eslint src --ext .ts",
     "test": "vitest run",
