fix: deploy vercel

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -14,6 +14,12 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "api"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "api",
+    "**/*.test.ts",
+    "**/__tests__/**"
+  ]
 }
 
