--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,14 +26,14 @@
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
     "zod": "^3.22.4",
-    "dotenv": "^16.4.1"
-  },
-  "devDependencies": {
+    "dotenv": "^16.4.1",
     "@types/node": "^20.11.5",
     "@types/pdf-parse": "^1.1.4",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
     "@vitest/coverage-v8": "^1.3.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
 }
