--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -2,6 +2,11 @@
   "buildCommand": "npm run prebuild && npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "framework": "vite"
+  "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
-
