--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,19 +15,18 @@
   },
   "dependencies": {
     "@agentic-ai-chat/shared": "*",
-    "@fastify/cors": "^8.5.0",
-    "@fastify/jwt": "^7.2.4",
-    "@fastify/multipart": "^8.1.0",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
-    "fastify": "^4.25.2",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.24.1",
     "pdf-parse": "^1.1.1",
-    "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0",
     "zod": "^3.22.4",
     "dotenv": "^16.4.1",
     "@types/node": "^20.11.5",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/pdf-parse": "^1.1.4",
     "typescript": "^5.3.3"
   },
