--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,7 @@
     "@agentic-ai-chat/shared": "*",
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express-jwt": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.24.1",
     "pdf-parse": "^1.1.1",
@@ -26,6 +26,7 @@
     "@types/node": "^20.11.5",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pdf-parse": "^1.1.4",
     "typescript": "^5.3.3"
