--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "openai": "^4.24.1",
     "pdf-parse": "^1.1.1",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1",
     "zod": "^3.22.4",
     "dotenv": "^16.4.1",
     "@types/node": "^20.11.5",
