--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,23 +15,23 @@
   },
   "dependencies": {
     "@agentic-ai-chat/shared": "*",
-    "express": "^4.18.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.11.5",
+    "@types/pdf-parse": "^1.1.4",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.2",
-    "openai": "^4.24.1",
+    "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
-    "zod": "^3.22.4",
-    "dotenv": "^16.4.1",
-    "@types/node": "^20.11.5",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/pdf-parse": "^1.1.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^1.3.1",
@@ -39,4 +39,3 @@
     "vitest": "^1.3.1"
   }
 }
-
